added merriweather reference to storybook head

--- a/packages/storybook-html/.storybook/preview-head.html
+++ b/packages/storybook-html/.storybook/preview-head.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v6/fonts/Roboto/roboto.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css" />
