private-design-output, storybook-html: update example code

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -5,87 +5,85 @@
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v6/fonts/Roboto/roboto.css" />
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script type="text/javascript">
-      // initialise some UQ scripts here
-    </script>
   </head>
   <body>
-    <header class="header">
-      <div class="header__container">
-          <div class="nav-global">
-              <div class="logo">
-                  <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-                  <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-logo--reversed.svg"></a>
-              </div>
-              <nav class="menu-global">
-                  <ul>
-                      <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
-                      <li><a href="https://future-students.uq.edu.au/">Study</a></li>
-                      <li><a href="https://maps.uq.edu.au/">Maps</a></li>
-                      <li><a href="https://www.uq.edu.au/news/">News</a></li>
-                      <li><a href="https://www.uq.edu.au/events/">Events</a></li>
-                      <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
-                      <li><a href="https://www.library.uq.edu.au/">Library</a></li>
-                      <li><a href="https://giving.uq.edu.au/">Give now</a></li>
-                      <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
-                      <li class="menu-global__search-toggle">
-                          <button class="search-toggle__button">Search</button>
-                      </li>
-                  </ul>
-              </nav>
-          </div>
-          <div class="nav-search">
-              <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" id="uq-search" accept-charset="UTF-8">
-                  <fieldset id="edit-as-sitesearch--wrapper" class="nav-search__wrapper">
-                      <legend class="hidden">
-                          <span class="nav-search__title">What are you looking for?</span>
-                      </legend>
-                      <span class="nav-search__title">What are you looking for?</span>
-                      <div class="nav-search__scope">
-                          <div class="nav-search__radio-wrapper">
-                              <div class="form-item">
-                                  <input type="radio" id="global-site-search" name="site-search-scope" value="" class="form-radio">
-                                  <label for="global-site-search" class="option">
-                                      Search all UQ websites
-                                  </label>
-                              </div>
-                              <div class="form-item">
-                                  <input type="radio" id="local-site-search" name="site-search-scope" value="https://xyz.uq.edu.au/" checked="checked" class="form-radio">
-                                  <label for="local-site-search" class="option">
-                                      Search this website (xyz.uq.edu.au)
-                                  </label>
-                              </div>
-                          </div>
-                      </div>
-                  </fieldset>
-                  <div class="nav-search__query">
-                      <span class="search-query__wrapper">
-                          <label for="edit-q" class="visually-hidden">
-                              Search term
-                          </label>
-                          <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
-                          <span class="search-query__button">
-                              <input type="submit" id="edit-submit--2" name="op" value="Search" class="search-query__submit">
-                          </span>
-                      </span>
-                  </div>
-              </form>
-  
-              <nav class="menu-global">
-                  <ul>
-                      <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
-                      <li><a href="https://future-students.uq.edu.au/">Study</a></li>
-                      <li><a href="https://maps.uq.edu.au/">Maps</a></li>
-                      <li><a href="https://www.uq.edu.au/news/">News</a></li>
-                      <li><a href="https://www.uq.edu.au/events/">Events</a></li>
-                      <li><a href="https://www.library.uq.edu.au/">Library</a></li>
-                      <li><a href="https://giving.uq.edu.au/">Give now</a></li>
-                      <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
-                  </ul>
-              </nav>
-          </div>
-      </div>
-  </header>
+    <header class="uq-header">
+        <div class="uq-header__container">
+            <div class="nav-global">
+                <div class="logo">
+                    <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+                    <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v9/logos/corporate/uq-logo--reversed.svg"></a>
+                </div>
+                <nav class="menu-global">
+                    <ul>
+                        <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                        <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+                        <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+                        <li><a href="https://www.uq.edu.au/news/">News</a></li>
+                        <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+                        <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+                        <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+                        <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+                        <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+                        <li class="menu-global__search-toggle">
+                            <button class="search-toggle__button">Search</button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="nav-search">
+                <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" id="uq-search" accept-charset="UTF-8">
+                    <fieldset id="edit-as-sitesearch--wrapper" class="nav-search__wrapper">
+                        <legend class="hidden">
+                            <span class="nav-search__title">What are you looking for?</span>
+                        </legend>
+                        <span class="nav-search__title">What are you looking for?</span>
+                        <div class="nav-search__scope">
+                            <div class="nav-search__radio-wrapper">
+                                <div class="form-item">
+                                    <input type="radio" id="global-site-search" name="site-search-scope" value="" class="form-radio">
+                                    <label for="global-site-search" class="option">
+                                        Search all UQ websites
+                                    </label>
+                                </div>
+                                <div class="form-item">
+                                    <input type="radio" id="local-site-search" name="site-search-scope" value="https://xyz.uq.edu.au/" checked="checked" class="form-radio">
+                                    <label for="local-site-search" class="option">
+                                        Search this website (xyz.uq.edu.au)
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <div class="nav-search__query">
+                        <span class="search-query__wrapper">
+                            <label for="edit-q" class="visually-hidden">
+                                Search term
+                            </label>
+                            <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
+                            <span class="search-query__button">
+                                <input type="submit" id="edit-submit--2" name="op" value="Search" class="search-query__submit">
+                            </span>
+                        </span>
+                    </div>
+                </form>
+    
+                <nav class="menu-global">
+                    <ul>
+                        <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                        <li><a href="https://www.uq.edu.au/news/">News</a></li>
+                        <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+                        <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+                        <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+                        <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+                        <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+                        <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+                        <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
     <!-- main-menu -->
     <div id="main-menu" class="main-menu">
@@ -765,64 +763,64 @@
     </div>
 
 
-    <!-- footer -->
-    <footer class="footer">
-        <div class="footer__content">
-            <div class="row">
-                <div class="large-12 columns">
-                    <div class="acknowledgement-statement">
-                        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="" class="acknowledgement-statement__link">Reconciliation statement</a>
-                    </div>
-                    <!-- <div class="acknowledgement-statement">
-                The University of Queensland (UQ) acknowledges the Traditional Owners and their custodianship of the lands on which UQ operates. We pay our respects to their Ancestors and their descendants, who continue cultural and spiritual connections to Country. We recognise their valuable contributions to Australian and global society. &mdash; <a href="" class="acknowledgement-statement__link">Reconciliation statement</a>
-              </div> -->
-                </div>
-                <div class="medium-9 columns">
-                    <div class="footer__copyright">
-                        &copy; The University of Queensland
-                    </div>
-                    <div class="footer__contact">
-                        Enquiries: <a href="tel:+61733651111" class="footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
-                    </div>
-                    <div class="footer__meta">
-                        <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
-                        <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B
-              </a>
-                    </div>
-                </div>
-                <div class="medium-3 columns">
-                    <div class="footer__emergency-contact footer__aside">
-                        <strong class="footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="footer__link footer__emergency-phone" onclick="gtag('event', 'click',
-                  {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="footer__footer">
-                    <div class="columns large-9 medium-12">
-                        <div class="menu-footer">
-                            <ul class="menu-footer__list">
-                                <li class="menu-footer__item">
-                                    <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
-                                </li>
-                                <li class="menu-footer__item">
-                                    <a href="https://www.uq.edu.au/rti/" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
-                                </li>
-                                <li class="menu-footer__item">
-                                    <a href="" rel="" class="menu-footer__link">Accessibility</a>
-                                </li>
-                                <li class="menu-footer__item">
-                                    <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="columns large-3 medium-12">
-                        <a href="" class="footer__login-link footer__aside" rel="nofollow">Login</a>
-                    </div>
+    <!-- footer --> 
+    <footer class="uq-footer" data-gtm-category="Footer">
+      <div class="uq-footer__content">
+
+        <div class="uq-footer__flex-container">
+            <div class="uq-footer__flex-item">
+                <div class="uq-footer__acknowledgement-statement">
+                    UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-footer__acknowledgement-statement__link">Reconciliation statement</a>
                 </div>
             </div>
         </div>
+
+        <div class="uq-footer__flex-container">
+            <div class="uq-footer__flex-item">
+                <div class="uq-footer__copyright">© The University of Queensland</div>
+                <div class="uq-footer__contact">
+                    Enquiries: <a href="tel:+61733651111" class="uq-footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="uq-footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
+                </div>
+                <div class="uq-footer__meta">
+                    <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
+                    <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
+                </div>
+            </div>
+            <div class="uq-footer__flex-item">
+                <div class="uq-footer__emergency-contact uq-footer__aside">
+                        <strong class="uq-footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="uq-footer__link footer__emergency-phone" onclick="gtag('event', 'click',
+                  {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="uq-footer__footer">
+          <div class="uq-footer__flex-container">
+              <div class="uq-footer__flex-item">
+                  <div class="uq-footer__footer-menu">
+                      <ul class="uq-footer__footer-menu__list">
+                          <li class="uq-footer__footer-menu__item">
+                              <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+                          </li>
+                          <li class="uq-footer__footer-menu__item">
+                              <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
+                          </li>
+                          <li class="uq-footer__footer-menu__item">
+                              <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
+                          </li>
+                          <li class="uq-footer__footer-menu__item">
+                              <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="uq-footer__flex-item">
+                  <a href="" class="uq-footer__login-link uq-footer__aside" rel="nofollow">Login</a>
+              </div>
+          </div>
+        </div>
+
+      </div>
     </footer>
 
     <script type="text/javascript" src="js/uq-uidf.min.js"></script>
