Removal of UQ Main Menu - minor style updates

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -89,10 +89,10 @@
 <div class="header__secondary section">
   <div class="section__content">
     <div class="header__secondary__title">
-      <a href="/" class="header__site-name">Future Students</a>
+      <a href="/" class="header__site-name">Site title</a>
     </div>
     <div class="header__secondary__actions">
-      <div>Hello world</div>
+      <div>[Site utilities go here]</div>
 
       <button
         class="js-nav-toggle header__secondary__nav-toggle button button--tertiary button--icon-only icon--standard--close"
