--- a/packages/storybook-html/.storybook/preview-head.html
+++ b/packages/storybook-html/.storybook/preview-head.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v6/fonts/Roboto/roboto.css" />
 <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap">
