--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -253,7 +253,7 @@
       <div class="column">
         <ol class="uq-breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <li class="uq-breadcrumb__item uq-breadcrumb--home" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-            <a href="/" class="uq-breadcrumb__link uq-breadcrumb__link--home">Home</a>
+            <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
             <meta itemprop="position" content="1">
           </li>
           <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
@@ -261,7 +261,7 @@
             <meta itemprop="position" content="2">
           </li>
           <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-            <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources" title="">Human resources for University of Queensland</a>
+            <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources for University of Queensland</a>
             <meta itemprop="position" content="3">
           </li>
         </ol>
