private-design-output: updated reference to Montserrat font

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -4,6 +4,7 @@
     <title>UQ UIDF Example</title>
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v6/fonts/Roboto/roboto.css" />
     <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css" />
+    <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v12/fonts/Montserrat/montserrat.css">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
