--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -669,7 +669,7 @@
       <div class="uq-footer__container">
     
           <div class="uq-footer__acknowledgement">
-              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
+              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
           </div>
     
           <div class="uq-footer__row">
