--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -442,69 +442,154 @@
     </div>
     <br/>
 
-    <!-- grid-menu -->
-    <div class="uq-grid">
-      <div class="uq-grid__col uq-grid__col--6">
-        <h2>Grid menu with descriptions</h2>
-        <ul class="grid-menu">
-          <li class="grid-menu__item">
-            <a href="#" class="grid-menu__link">
-              <span class="grid-menu__icon icon icon-bed"></span>
-              <span class="grid-menu__title">Menu link 1</span>
-              <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
-                luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
-              </span>
-            </a>
-          </li>
-          <li class="grid-menu__item">
-            <a href="#" class="grid-menu__link">
-              <span class="grid-menu__icon icon icon-bed"></span>
-              <span class="grid-menu__title">Menu link 2</span>
-              <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
-                luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
-              </span>
-            </a>
-          </li>
-          <li class="grid-menu__item">
-            <a href="#" class="grid-menu__link">
-              <span class="grid-menu__icon icon icon-bed"></span>
-              <span class="grid-menu__title">Menu link 3</span>
-              <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
-                luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
-              </span>
-            </a>
-          </li>
-          <li class="grid-menu__item">
-            <a href="#" class="grid-menu__link">
-              <span class="grid-menu__icon icon icon-bed"></span>
-              <span class="grid-menu__title">Menu link 4</span>
-              <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
-                luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
-              </span>
-            </a>
-          </li>
-          <li class="grid-menu__item">
-            <a href="#" class="grid-menu__link">
-              <span class="grid-menu__icon icon icon-bed"></span>
-              <span class="grid-menu__title">Menu link 5</span>
-              <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
-                luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
-              </span>
-            </a>
-          </li>
-        </ul>
-        <br/>
-        <h2>Grid menus with equalised height</h2>
-        <ul class="grid-menu">
-          <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Refresh to see me equalise!</span></a></li>
-          <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 2</span></a></li>
-          <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">I have a long title! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus.</span></a></li>
-          <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 4</span></a></li>
-          <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 5</span></a></li>
-          <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 6</span></a></li>
-        </ul>
-      </div>
-    </div>
+    <!-- uq-grid-menu -->
+    <h2>Grid menu default</h2>
+    <ul class="uq-grid-menu">
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 1</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 3</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+    </ul>
+
+    <h2>Grid menu with description</h2>
+    <ul class="uq-grid-menu">
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 1</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 2</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 3</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 4</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 5</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+    </ul>
+
+    <h2>Grid menu with description and dark-text variant</h2>
+    <ul class="uq-grid-menu uq-grid-menu--dark-text">
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 1</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 2</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 3</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 4</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 5</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+    </ul>
+
+    <h2>Grid menu 2 column</h2>
+    <ul class="uq-grid-menu uq-grid-menu--2-column">
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 1</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 3</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+    </ul>
+
+    <h2>Grid menu 4 column</h2>
+    <ul class="uq-grid-menu uq-grid-menu--4-column">
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 1</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 3</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+    </ul>
+
+    <h2>Grid menu with icons</h2>
+    <ul class="uq-grid-menu">
+      <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--car-1"> </span> <span class="uq-grid-menu__title">Menu link 1</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--bus"> </span> <span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--sea-transport-boat"> </span> <span class="uq-grid-menu__title">Menu link 3</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--railroad-train-1"> </span> <span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--icon-plane-1"> </span> <span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li><a href="#"><span class="uq-grid-menu__icon uq-icon uq-icon--bicycle"> </span> <span class="uq-grid-menu__title">Menu link 6</span></a></li>
+    </ul>
+    <br/>
+    <h2>Grid menu with equalised height (JS)</h2>
+    <ul class="uq-grid-menu">
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+    </ul>
     <br/>
 
     <div class="uq-grid">
@@ -734,7 +819,7 @@
       // Initialise accordions
       new uq.accordion();
       // Equalised grid menu examples
-      var equaliseGridMenu = uq.gridMenuEqualiser('.grid-menu--equalised>a');
+      var equaliseGridMenu = uq.gridMenuEqualiser('.uq-grid-menu--equalised>a');
       equaliseGridMenu.align();
     </script>
   </body>
