--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -17,7 +17,7 @@
           </div>
           <nav class="menu-global">
             <ul>
-              <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+              <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
               <li><a href="https://future-students.uq.edu.au/">Study</a></li>
               <li><a href="https://maps.uq.edu.au/">Maps</a></li>
               <li><a href="https://www.uq.edu.au/news/">News</a></li>
@@ -64,7 +64,7 @@
 
             <nav class="menu-global">
               <ul>
-                <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
                 <li><a href="https://www.uq.edu.au/news/">News</a></li>
                 <li><a href="https://www.library.uq.edu.au/">Library</a></li>
                 <li><a href="https://future-students.uq.edu.au/">Study</a></li>
