added jobs link

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -22,6 +22,7 @@
               <li><a href="https://maps.uq.edu.au/">Maps</a></li>
               <li><a href="https://www.uq.edu.au/news/">News</a></li>
               <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+              <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
               <li><a href="https://www.library.uq.edu.au/">Library</a></li>
               <li><a href="https://giving.uq.edu.au/">Give now</a></li>
               <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
