--- a/packages/storybook-html/src/patterns/form-validation/form-errors-kitchen-sink.html
+++ b/packages/storybook-html/src/patterns/form-validation/form-errors-kitchen-sink.html
@@ -1,79 +1,74 @@
-<div class="uq-grid">
-  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4">
-    <h1><small>Before error insertion</small></h1>
-    <div id="errorSummary" role="alert"></div>
-    <form id="passwordResetForm" method="post" class="form--full-width form--transparent-fieldsets">
+<div class="uq-grid uq-grid--halves uq-grid--full-width">
+  <div class="uq-grid__col">
+    <h4>Before the user tries to submit this empty form</h4>
+    <form method="post">
       <fieldset>
-        <label for="username" id="usernameLabel" class="form__label">UQ username <span class="form__required">(required)</span></label>
-        <input type="text" name="username" id="username" class="form__input" aria-describedby="usernameError usernameDesc" aria-invalid="true">
-        <div id="usernameError" aria-live="polite"></div>
-        <p id="usernameDesc" class="form__help-text"><a href="https://support.my.uq.edu.au/app/answers/detail/a_id/2535" target="_blank">Forgotten your username?</a></p>
+        <label for="username">UQ username <span class="label__required">(required)</span></label>
+        <input type="text" name="username">
+        <p class="inline-help"><a href="https://support.my.uq.edu.au/app/answers/detail/a_id/2535" target="_blank">Forgotten your username?</a></p>
       </fieldset>
       <fieldset>
-        <legend id="methodDesc" class="form__legend">We'll send you a verification code so you can regain access to your account.<br>Where should we send your verification code? <span class="form__required">(required)</span></legend>
+        <legend>We'll send you a verification code so you can regain access to your account. Where should we send your verification code? <span class="legend__required">(required)</span></legend>
         <div>
-          <label id="methodEmailLabel" class="form__label">
-            <input type="radio" id="methodEmail" class="form__input" name="method" value="email" title="Send verification code to personal email address" aria-describedby="methodError methodDesc" aria-invalid="true">
-            Personal email
+          <label>
+            <input type="radio" name="method" value="email" title="Send verification code to personal email address">
+            <span>Personal email</span>
           </label>
-          <label for="email" id="emailLabel" class="form__label form__label--disabled">The personal email address you had set in my.UQ dashboard</label>
-          <input type="email" name="email" id="email" class="form__input" aria-describedby="emailError registeredDetailsDesc" disabled="" aria-invalid="false">
-          <div id="emailError" aria-live="polite"></div>
+          <label class="label--disabled">The personal email address you had set in my.UQ dashboard</label>
+          <input type="email" name="email" disabled>
         </div>
         <div>
-          <label id="methodMobileLabel" class="form__label">
-            <input type="radio" id="methodMobile" class="form__input" name="method" value="mobile" title="Send verification code to mobile number" aria-describedby="methodError methodDesc" aria-invalid="true">
-            Mobile number
+          <label>
+            <input type="radio" name="method" value="mobile" title="Send verification code to mobile number">
+            <span>Mobile number</span>
           </label>
-          <label for="mobile" id="mobileLabel" class="form__label form__label--disabled">The mobile number you had set in my.UQ dashboard</label>
-          <input type="text" name="mobile" id="mobile" class="form__input" aria-describedby="mobileError registeredDetailsDesc" disabled="" aria-invalid="false">
-          <div id="mobileError" aria-live="polite"></div>
-        </div>  
-        <div id="methodError" aria-live="polite"></div>
+          <label class="label--disabled">The mobile number you had set in my.UQ dashboard</label>
+          <input type="text" name="mobile" disabled>
+        </div>
       </fieldset>
     </form>
   </div>
-  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4">
-    <h1><small>After error insertion</small></h1>
+  <div class="uq-grid__col">
+    <h4>After the user tries to submit this empty form</h4>
     <div id="errorSummary" class="error-summary" role="alert">
       <h2 class="error-summary__title">Your form was not submitted. Please fix the following issues.</h2>
       <ul class="error-summary__list">
         <li class="error-summary__list__item">
-          <a href="#username">Enter your UQ username</a>
+          <a href="#usernameLabel">Enter your UQ username</a>
         </li>
         <li class="error-summary__list__item">
-          <a href="#methodEmail">Select a verification method to complete</a>
+          <a href="#methodDesc">Select a verification method to complete</a>
         </li>
       </ul>
     </div>
-    <form id="passwordResetForm" method="post" class="form--full-width form--transparent-fieldsets">
+    <form method="post">
       <fieldset>
-        <label for="username" id="usernameLabel" class="form__label form__label--error">UQ username <span class="form__required">(required)</span></label>
-        <input type="text" name="username" id="username" class="form__input form__input--error" aria-describedby="usernameError usernameDesc" aria-invalid="true">
-        <div id="usernameError" aria-live="polite" class="form__inline-error-message">Enter your UQ username</div>
-        <p id="usernameDesc" class="form__help-text"><a href="https://support.my.uq.edu.au/app/answers/detail/a_id/2535" target="_blank">Forgotten your username?</a></p>
+        <label for="username" id="usernameLabel" class="label--error">UQ username <span class="label__required">(required)</span></label>
+        <input type="text" name="username" id="username" class="input--error" aria-describedby="usernameError usernameDesc" aria-invalid="true">
+        <div id="usernameError" aria-live="polite" class="inline-error-message">Enter your UQ username</div>
+        <p id="usernameDesc" class="inline-help"><a href="https://support.my.uq.edu.au/app/answers/detail/a_id/2535" target="_blank">Forgotten your username?</a></p>
       </fieldset>
       <fieldset>
-        <legend id="methodDesc" class="form__legend form__legend--error">We'll send you a verification code so you can regain access to your account.<br>Where should we send your verification code? <span class="form__required">(required)</span></legend>
+        <legend id="methodDesc" class="legend--error">We'll send you a verification code so you can regain access to your account. Where should we send your verification code? <span class="legend__required">(required)</span></legend>
         <div>
-          <label id="methodEmailLabel" class="form__label form__label--error">
-            <input type="radio" id="methodEmail" class="form__input form__input--error" name="method" value="email" title="Send verification code to personal email address" aria-describedby="methodError methodDesc" aria-invalid="true">
-            Personal email
+          <label class="label--error">
+            <input type="radio" id="methodEmail" class="input--error" name="method" value="email" title="Send verification code to personal email address" aria-describedby="methodError methodDesc" aria-invalid="true">
+            <span>Personal email</span>
           </label>
-          <label for="email" id="emailLabel" class="form__label form__label--disabled">The personal email address you had set in my.UQ dashboard</label>
-          <input type="email" name="email" id="email" class="form__input" aria-describedby="emailError registeredDetailsDesc" disabled="" aria-invalid="false">
+          <label for="email" class="label--disabled">The personal email address you had set in my.UQ dashboard</label>
+          <input type="email" name="email" id="email" aria-describedby="emailError" disabled aria-invalid="false">
           <div id="emailError" aria-live="polite"></div>
         </div>
         <div>
-          <label id="methodMobileLabel" class="form__label form__label--error">
-            <input type="radio" id="methodMobile" class="form__input form__input--error" name="method" value="mobile" title="Send verification code to mobile number" aria-describedby="methodError methodDesc" aria-invalid="true">
-            Mobile number
+          <label class="label--error">
+            <input type="radio" id="methodMobile" class="input--error" name="method" value="mobile" title="Send verification code to mobile number" aria-describedby="methodError methodDesc" aria-invalid="true">
+            <span>Mobile number</span>
           </label>
-          <label for="mobile" id="mobileLabel" class="form__label form__label--disabled">The mobile number you had set in my.UQ dashboard</label>
-          <input type="text" name="mobile" id="mobile" class="form__input" aria-describedby="mobileError registeredDetailsDesc" disabled="" aria-invalid="false">
+          <label for="mobile" class="label--disabled">The mobile number you had set in my.UQ dashboard</label>
+          <input type="text" name="mobile" id="mobile" aria-describedby="mobileError" disabled aria-invalid="false">
           <div id="mobileError" aria-live="polite"></div>
-        </div>  
-        <div id="methodError" aria-live="polite" class="form__inline-error-message">Select a verification method to complete</div>
+        </div>
+        <div id="methodError" aria-live="polite" class="inline-error-message">Select a verification method to complete</div>
       </fieldset>
     </form>
   </div>
