form, storybook-html: rename error and success message CSS classes

--- a/packages/storybook-html/src/patterns/form-validation/form-errors-kitchen-sink.html
+++ b/packages/storybook-html/src/patterns/form-validation/form-errors-kitchen-sink.html
@@ -45,7 +45,7 @@
       <fieldset>
         <label for="username" id="usernameLabel" class="label--error">UQ username <span class="label__required">(required)</span></label>
         <input type="text" name="username" id="username" class="input--error" aria-describedby="usernameError usernameDesc" aria-invalid="true">
-        <div id="usernameError" aria-live="polite" class="inline-error-message">Enter your UQ username</div>
+        <div id="usernameError" aria-live="polite" class="error-message">Enter your UQ username</div>
         <p id="usernameDesc" class="inline-help"><a href="https://support.my.uq.edu.au/app/answers/detail/a_id/2535" target="_blank">Forgotten your username?</a></p>
       </fieldset>
       <fieldset>
@@ -68,7 +68,7 @@
           <input type="text" name="mobile" id="mobile" aria-describedby="mobileError" disabled aria-invalid="false">
           <div id="mobileError" aria-live="polite"></div>
         </div>
-        <div id="methodError" aria-live="polite" class="inline-error-message">Select a verification method to complete</div>
+        <div id="methodError" aria-live="polite" class="error-message">Select a verification method to complete</div>
       </fieldset>
     </form>
   </div>
