--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -270,7 +270,7 @@
 
     <!-- body -->
     <div class="uq-grid">
-      <div class="uq-grid__col uq-grid__col--6">
+      <div class="uq-grid__col uq-grid__col--4">
         <h1>h1 — Heading 1</h1>
         <h2>h2 — Heading 2</h2>
         <h3>h3 — Heading 3</h3>
@@ -279,6 +279,39 @@
         <h6>h6 — Heading 6</h6>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fames ac turpis egestas sed tempus urna et. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Amet justo donec enim diam vulputate ut. Laoreet non curabitur gravida arcu ac tortor dignissim. Consequat interdum varius sit amet mattis vulputate enim. Gravida dictum fusce ut placerat orci. Suspendisse sed nisi lacus sed viverra tellus in hac. Enim sed faucibus turpis in eu mi. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Consectetur purus ut faucibus pulvinar elementum integer enim neque. Malesuada pellentesque elit eget gravida cum. Et sollicitudin ac orci phasellus egestas. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Eu volutpat odio facilisis mauris. Mi ipsum faucibus vitae aliquet nec ullamcorper.</p>
         <p>Faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Sem nulla pharetra diam sit amet. Diam sit amet nisl suscipit adipiscing bibendum. Turpis massa tincidunt dui ut ornare lectus sit amet est. Tristique senectus et netus et. Enim ut sem viverra aliquet. Urna condimentum mattis pellentesque id nibh tortor id aliquet. Ultricies leo integer malesuada nunc vel. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Consequat ac felis donec et odio pellentesque diam volutpat commodo.</p>
+      </div>
+      <div class="uq-grid__col uq-grid__col--2">
+
+        <!-- Side nav multi-level -->
+        <div class="uq-side-nav">
+          <!-- Side nav title -->
+          <h3 class="uq-side-nav__title">
+            <a href="#" class="uq-side-nav__title-link">Side nav title</a>
+          </h3>
+          <!-- Side nav -->
+          <nav class="uq-side-nav__container" aria-label="Side navigation">
+            <ul class="uq-side-nav__list uq-side-nav__list--level-1">
+              <li class="uq-side-nav__list-item">
+                <a href="#" class="uq-side-nav__link">Side nav list1</a>
+              </li>
+              <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active">
+                <a href="#" class="uq-side-nav__link" aria-haspopup="true" aria-expanded="true">Side nav list2</a>
+                <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side nav list2 submenu">
+                  <li class="uq-side-nav__list-item">
+                    <a href="#" class="uq-side-nav__link">Side nav list2 submenu1</a>
+                  </li>
+                  <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
+                    <a href="#" class="uq-side-nav__link">Side nav list2 submenu2</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="uq-side-nav__list-item">
+                <a href="#" class="uq-side-nav__link">Side nav list3</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
       </div>
     </div>
     <br/>
