grid-menu, private-design-output: remove redundant equaliser script

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -857,12 +857,9 @@
       new uq.header();
       // Initialise Main Navigation
       var navelement = document.getElementById("jsNav");
-      var nav = new uq.siteHeaderNavigation(navelement, "uq-site-header__navigation");
+      new uq.siteHeaderNavigation(navelement, "uq-site-header__navigation");
       // Initialise accordions
       new uq.accordion();
-      // Equalised grid menu examples
-      var equaliseGridMenu = uq.gridMenuEqualiser('.uq-grid-menu--equalised>a');
-      equaliseGridMenu.align();
     </script>
   </body>
 </html>
