additional fixes - icons import fix

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -417,7 +417,7 @@
             <div class="uq-card">
               <div class="uq-card__image__wrapper">
                 <div class="uq-card__image">
-                  <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+                  <img src="http://lorempixel.com/500/350" alt="Card image description">
                 </div>
               </div>
               <div class="uq-card__content__wrapper">
@@ -439,7 +439,7 @@
             <div class="uq-card">
               <div class="uq-card__image__wrapper">
                 <div class="uq-card__image">
-                  <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+                  <img src="http://lorempixel.com/500/350" alt="Card image description">
                 </div>
               </div>
               <div class="uq-card__content__wrapper">
@@ -461,7 +461,7 @@
             <div class="uq-card">
               <div class="uq-card__image__wrapper">
                 <div class="uq-card__image">
-                  <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+                  <img src="http://lorempixel.com/500/350" alt="Card image description">
                 </div>
               </div>
               <div class="uq-card__content__wrapper">
@@ -483,7 +483,7 @@
             <div class="uq-card">
               <div class="uq-card__image__wrapper">
                 <div class="uq-card__image">
-                  <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+                  <img src="http://lorempixel.com/500/350" alt="Card image description">
                 </div>
               </div>
               <div class="uq-card__content__wrapper">
@@ -512,7 +512,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -533,7 +533,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -554,7 +554,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -575,7 +575,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -602,7 +602,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -623,7 +623,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -644,7 +644,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -665,7 +665,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="http://lorempixel.com/500/350" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -696,7 +696,7 @@
         <ul class="uq-grid-menu">
           <li class="uq-grid-menu__item">
             <a href="#" class="uq-grid-menu__link">
-              <span class="uq-grid-menu__icon uq-icon uq-icon--other--hotel-bedroom-1"></span>
+              <span class="uq-grid-menu__icon uq-icon uq-icon--architecture-and-planning--school-building"></span>
               <span class="uq-grid-menu__title">Menu link 1</span>
               <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
                 luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -906,7 +906,7 @@
       </div>
     </div>
     
-    <div class="uq-section uq-section--centered uq-section--image-behind uq-section--light-text">
+    <div class="uq-section uq-section--centered uq-section--dark-tint uq-section--image-behind uq-section--light-text">
       <div class="uq-section__background"><img src="http://lorempixel.com/1920/1080" /></div>
     
       <div class="uq-section__container">
