added hero banner to output

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -210,6 +210,16 @@
       </div>
     </div>    
 
+    <!-- Page header (default) -->
+
+    <div class="uq-hero">  
+      <div class="uq-hero__content">
+        <div class="uq-hero__text">
+          <h1>Page title</h1>
+        </div>
+      </div>
+    </div>
+
     <!-- alert -->
     <div class="uq-alert uq-alert--info" role="alert">
       <div class="uq-alert__message">
