fixed card classname references

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -528,7 +528,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -549,7 +549,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -570,7 +570,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -591,7 +591,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -618,7 +618,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -639,7 +639,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -660,7 +660,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -681,7 +681,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
